force-app/main/default/objects/Integration_Service_Field__c/fields/Create__c.field-meta.xml
<CustomField>
    <fullName>Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create</label>
    <type>Checkbox</type>
</CustomField>