force-app/main/default/objects/Integration_Service_Field__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Primitive data type of field</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>FLOAT</fullName>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>CHAR</fullName>
            </value>
            <value>
                <fullName>VARCHAR</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>TIME</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>TIMESTAMP</fullName>
            </value>
            <value>
                <fullName>BINARY</fullName>
            </value>
            <value>
                <fullName>VARBINARY</fullName>
            </value>
            <value>
                <fullName>BLOB</fullName>
            </value>
            <value>
                <fullName>UUID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>