force-app/main/default/objects/Integration_Service_Field__c/fields/Integration_Service_Object__c.field-meta.xml
<CustomField>
    <fullName>Integration_Service_Object__c</fullName>
    <label>Integration Service Object</label>
    <referenceTo>Integration_Service_Object__c</referenceTo>
    <relationshipLabel>Integration Service Fields</relationshipLabel>
    <relationshipName>Integration_Service_Fields</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>